--- a/.config
+++ b/.config
@@ -137,6 +137,7 @@ CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon_new=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_naiveproxy=y
